Fix footer positional issues on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -268,6 +268,11 @@ a {
 }
 
 @media (max-width: 767.9px) {
+    
+    .email {
+        font-size: 0.9rem;
+    }
+    
     .toast-img{
         max-width: 50%;
     }    
